labs/lab-e-mtls-authz/authz-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: { name: deny-all, namespace: default }
spec: {}
